# parproga

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
7_sem/: 1.py  CMakeLists.txt  README.md  intro_common_mem.cpp  intro_common_mem_2.cpp  intro_hello_world.cpp  intro_sum.cpp
first_task/: CMakeLists.txt  README.md
first_task/src/: 1_lab.cpp  1_lab_1_thread.cpp  1_lab_analysis.ipynb  1_lab_new.cpp  integral.cpp  mpi_test.cpp  test_matplot.cpp  trash.cpp
notes/: README.md
src/: 1_lab.cpp  1_lab_1_thread.cpp  1_lab_analysis.ipynb  1_lab_new.cpp  communication_time.cpp  integral.cpp  main.cpp  pi.cpp
test_matplot/: CMakeLists.txt  main.cpp
